# ComputerVisionImageStich

./: CMakeLists.txt  Untitled-1.cpp
ImageStitching/: ImageProcess.cpp  ImageProcess.h  MyBlending.cpp  MyBlending.h  MyMatching.cpp  MyMatching.h  MySift.cpp  MySift.h  Projection.h  main.cpp  stdafx.cpp  targetver.h
example/: FileReading.h  main.cpp  test.sh
example/vl/: sift.c  sift.h
